--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>stc_solutions</groupId>
-	<artifactId>apistc_solutions</artifactId>
+	<artifactId>apismcsolutions</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>apistc_solutions</name>
+	<name>apismcsolutions</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
