--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/***
+spring.datasource.url=jdbc:postgresql://localhost:5227/smcsolutions
 spring.datasource.username=postgres
 spring.datasource.password=****
 
