--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5227/smcsolutions
+spring.datasource.url=jdbc:postgresql://localhost:5432/smcsolutions
 spring.datasource.username=postgres
-spring.datasource.password=****
+spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
